--- a/src/main/webapp/products.xhtml
+++ b/src/main/webapp/products.xhtml
@@ -4,7 +4,7 @@
                 xmlns:f="jakarta.faces.core"
                 xmlns:p="http://primefaces.org/ui"
                 template="WEB-INF/layout/template.xhtml">
-    <ui:define name="title">TODO LIST</ui:define>
+    <ui:define name="title">PRODUCT LIST</ui:define>
     <ui:define name="content">
         <div class="card crud-demo">
             <h:form id="form" enctype="multipart/form-data">
